# matlab-zmq

./: .gitignore  CONTRIBUTING.md  README.md  compile_list.m  config.m  config_unix.m  config_win.m  make.m  zmq_ctx_get.cc  zmq_ctx_get.m  zmq_ctx_new.c  zmq_ctx_shutdown.cc  zmq_ctx_term.c  zmq_socket.c  zmq_version.cc
+zmq/+core/: connect.m  ctx_shutdown.m  ctx_term.m  getsockopt.m  send.m  unbind.m
examples/: collector.m  consumer.m  producer.m  pub_server.m  sub_client.m
fancy/: README.md
lib/: zmq_bind.m  zmq_close.m  zmq_ctx_new.m  zmq_ctx_set.m  zmq_disconnect.m  zmq_recv.m  zmq_send.m  zmq_setsockopt.m  zmq_socket.m  zmq_version.m
src/core/: bind.c  close.c  connect.c  ctx_get.c  ctx_new.c  ctx_set.c  ctx_shutdown.c  ctx_term.c  disconnect.c  getsockopt.c  poll.c  recv.c  send.c  setsockopt.c  socket.c  unbind.c  zmq_bind.c  zmq_close.c  zmq_ctx_get.c  zmq_ctx_new.c  zmq_ctx_shutdown.c  zmq_ctx_term.c  zmq_getsockopt.c  zmq_recv.c  zmq_send.c  zmq_setsockopt.c  zmq_socket.c  zmq_unbind.c  zmq_version.c
test/: test_getsockopt.m  test_zmq_ctx_get.m  test_zmq_version.m
tests/: runner.m  test_context_cleanup.m  test_context_get.m  test_getsockopt.m  test_socket_bind.m  test_socket_connect.m  test_socket_get.m  test_socket_send_recv.m  test_socket_send_recv_multipart.m  test_socket_send_recv_string.m  test_socket_set.m  test_zmq_bind.m  test_zmq_connect.m  test_zmq_ctx_get.m  test_zmq_getsockopt.m  test_zmq_req_rep.m  test_zmq_req_rep_multipart.m  test_zmq_setsockopt.m  test_zmq_socket.m  test_zmq_version.m
zmq_matlab_examples/: publisher.m  subscriber.m
zmq_ubuntu_examples/zmq_publisher/: CMakeLists.txt  main.cpp
zmq_ubuntu_examples/zmq_subscriber/: CMakeLists.txt  main.cpp
(+37 files in other folders)
